fix mobile spacing for circles on hero

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -8,12 +8,14 @@
 }
 
 .circle {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    border: 2px solid black;
+    border: 6px solid white;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
+    font-size: medium;
+    font-weight: bolder;
 }
